--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -51,6 +51,7 @@ security:
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/front, roles: ROLE_ADMIN }
 
 when@test:
     security:
