--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,11 @@ parameters:
     cover_directory: '%kernel.project_dir%/public/uploads/cover'
 
 services:
+    twig.extension.intl:
+        class: Twig\Extra\Intl\IntlExtension
+        tags:
+            - { name: twig.extension }
+
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
